--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
 		"source": "https://github.com/codekandis/persistence/tree/master"
 	},
 	"require": {
-		"php": "^7.4"
+		"php": "^7.4",
+		"ext-pdo": "*",
+		"codekandis/entities": "^0"
 	},
 	"require-dev": {
 		"roave/security-advisories": "dev-master",
